<resources>
    <string name="app_name">Duty Helper</string>

    <!--Activity Titles-->
    <string name="title_activity_task_list">Task List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_new_task">Add Task</string>
    <string name="title_activity_profile_settings">My Profile</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_new_group">New Group</string>

    <!-- Arrays -->
    <string-array name="task_resources">
        <item>Vacuum</item>
        <item>Mop</item>
        <item>Garbage Bags</item>
        <item>Cleaning Supplies</item>
        <item>Hand Tools</item>
        <item>Sponge</item>
        <item>Bucket</item>
        <item>Ladder</item>
    </string-array>

    <!--Button Text-->
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_Add_task">Add Task</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_assign_users">Assign Users</string>
    <string name="btn_add_resources">Add Resources</string>

    <!--Text Input Hints & Labels-->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_task_name">Task Name</string>
    <string name="hint_task_description">Task Description</string>
    <string name="hint_due_date">Due Date</string>
    <string name="label_incomplete">Incomplete</string>
    <string name="label_in_progress">In Progress</string>
    <string name="label_complete">Complete</string>
    <string name="label_task_view_switch">View My Tasks</string>
    <string name="label_total_points">Total Points</string>

    <!--Content Descriptions-->
    <string name="description_profile_picture">Profile Picture</string>
    <string name="description_task_icon">Task Icon</string>

    <!--Menu Item Labels-->
    <string name="action_profile">Profile</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="points">+100 Points</string>

    <!--Dialog Boxes-->
    <string name="dialog_title_delete_task">Delete Task</string>
    <string name="dialog_title_add_resources">Add Resources</string>
    <string name="dialog_title_assign_users">Assign Users</string>
    <string name="dialog_title_due_date">Set Due Date</string>
    <string name="dialog_message_delete_task">Are you sure you want to delete this task?</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">CANCEL</string>

    <!--Errors Messages-->
    <string name="error_required_field">Required Field</string>
    <string name="error_assign_user">Must assign at least 1 user</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_password_length">Must be longer than 8 characters</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_login">Incorrect Email or Password</string>

    <!--Toast Messages-->
    <string name="toast_task_added">Task Added</string>
    <string name="toast_task_updated">Task Updated</string>
    <string name="toast_task_deleted">Task Deleted</string>
    <string name="toast_sign_up_failed">Sign up process has failed</string>
    <string name="toast_signed_out">Signed out</string>
    <string name="toast_profile_updated">Profile Updated</string>

</resources>
